--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<h1>CRISPATCH</h1>
+				<p>A crisp way to do dispatch.<br />
+				Schedule a demo below.<!-- <a href="http://html5up.net">HTML5 UP</a>.</p> -->
 			</header>
 
 		<!-- Signup Form -->
